--- a/src/qawa/data/2017-trigger-rules.yaml
+++ b/src/qawa/data/2017-trigger-rules.yaml
@@ -5,7 +5,22 @@ Run2017.DoubleMuon:
         - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass3p8
         - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass8
     veto: []
-
+Run2017.SingleMuon:
+    pass:
+        - Mu8_TrkIsoVVL
+        - Mu17_TrkIsoVVL
+        - IsoMu20
+        - IsoMu24
+        - IsoMu27
+        - IsoMu30
+        - Mu50
+        - TkMu100
+        - OldMu100
+    veto:
+        - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass3p8
+        - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass8
+        - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass3p8
+        - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass8
 Run2017.DoubleEG:
     pass:
         - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
@@ -19,28 +34,6 @@ Run2017.DoubleEG:
         - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass8
         - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass3p8
         - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass8
-Run2017.MuonEG:
-    pass:
-        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu23_TrkIsoVVL_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu12_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu12_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL
-        - Mu23_TrkIsoVVL_Ele12_CaloIdL_TrackIdL_IsoVL
-        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL
-    veto:
-        - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass3p8
-        - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass8
-        - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass3p8
-        - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass8
-        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
-        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL
-        - DiEle27_WPTightCaloOnly_L1DoubleEG
-        - DoubleEle33_CaloIdL_MW
-        - DoubleEle25_CaloIdL_MW
-        - DoublePhoton70
-Run2017.SingleMuon:
-    pass:
         - Mu8_TrkIsoVVL
         - Mu17_TrkIsoVVL
         - IsoMu20
@@ -48,24 +41,8 @@ Run2017.SingleMuon:
         - IsoMu27
         - IsoMu30
         - Mu50
-    veto:
-        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu23_TrkIsoVVL_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu12_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu12_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL
-        - Mu23_TrkIsoVVL_Ele12_CaloIdL_TrackIdL_IsoVL
-        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL
-        - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass3p8
-        - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass8
-        - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass3p8
-        - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass8
-        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
-        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL
-        - DiEle27_WPTightCaloOnly_L1DoubleEG
-        - DoubleEle33_CaloIdL_MW
-        - DoubleEle25_CaloIdL_MW
-        - DoublePhoton70
+        - TkMu100
+        - OldMu100
 Run2017.SingleElectron:
     pass:
         - Ele27_WPTight_Gsf
@@ -77,23 +54,10 @@ Run2017.SingleElectron:
         - Ele115_CaloIdVT_GsfTrkIdT
         - Photon200
     veto:
-        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu23_TrkIsoVVL_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu12_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu12_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL
-        - Mu23_TrkIsoVVL_Ele12_CaloIdL_TrackIdL_IsoVL
-        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
-        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL
         - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass3p8
         - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass8
         - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass3p8
         - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass8
-        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
-        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL
-        - DiEle27_WPTightCaloOnly_L1DoubleEG
-        - DoubleEle33_CaloIdL_MW
-        - DoubleEle25_CaloIdL_MW
-        - DoublePhoton70
         - Mu8_TrkIsoVVL
         - Mu17_TrkIsoVVL
         - IsoMu20
@@ -101,3 +65,47 @@ Run2017.SingleElectron:
         - IsoMu27
         - IsoMu30
         - Mu50
+        - TkMu100
+        - OldMu100
+        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
+        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL
+        - DiEle27_WPTightCaloOnly_L1DoubleEG
+        - DoubleEle33_CaloIdL_MW
+        - DoubleEle25_CaloIdL_MW
+        - DoublePhoton70
+Run2017.MuonEG:
+    pass:
+        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
+        - Mu23_TrkIsoVVL_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
+        - Mu12_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
+        - Mu12_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL
+        - Mu23_TrkIsoVVL_Ele12_CaloIdL_TrackIdL_IsoVL
+        - Mu8_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL
+    veto:
+        - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass3p8
+        - Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_DZ_Mass8
+        - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass3p8
+        - Mu19_TrkIsoVVL_Mu9_TrkIsoVVL_DZ_Mass8
+        - Mu8_TrkIsoVVL
+        - Mu17_TrkIsoVVL
+        - IsoMu20
+        - IsoMu24
+        - IsoMu27
+        - IsoMu30
+        - Mu50
+        - TkMu100
+        - OldMu100
+        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
+        - Ele23_Ele12_CaloIdL_TrackIdL_IsoVL
+        - DiEle27_WPTightCaloOnly_L1DoubleEG
+        - DoubleEle33_CaloIdL_MW
+        - DoubleEle25_CaloIdL_MW
+        - DoublePhoton70
+        - Ele27_WPTight_Gsf
+        - Ele32_WPTight_Gsf
+        - Ele32_WPTight_Gsf_L1DoubleEG     
+        - Ele35_WPTight_Gsf
+        - Ele38_WPTight_Gsf
+        - Ele40_WPTight_Gsf
+        - Ele115_CaloIdVT_GsfTrkIdT
+        - Photon200
